# ObjectDetectionUltralitics

./: .gitignore  LICENSE  NutritionalData.py  README.md  SplitDataSet.py  main.py  match_recipes.py  pyproject.toml  utils.py
config/: config_params.yaml  data.yaml
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml  results.csv
